--- a/android-developer.html
+++ b/android-developer.html
@@ -188,7 +188,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/moneybox/job/android-developer/f7706c35395950607024046a089ff3f7/'>Android Developer at Moneybox</a></h5> 
+<h5><a href='https://snap.hr/moneybox/job/android-developer/f7706c35395950607024046a089ff3f7/'>Android Developer at Moneybox</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -230,7 +230,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light">Manchester, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Principal-Android-Developer/704'>Principal Android Developer - Career Portal</a></h5> 
+<h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Principal-Android-Developer/704'>Principal Android Developer - Career Portal</a></h5> 
 <p><span class="badge badge-light">Manchester, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -302,7 +302,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
+<h5><a href='http://asg.applytojob.com/apply/dbSkZEdD9J/Jr-Android-Application-Developer'>Jr. Android Application Developer - Advanced Systems Group - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA  Mountain View San Francisco</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -310,7 +310,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999697435832-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999697435832-android-developer'>JobTeaser Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -322,7 +322,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Minsk France Italy Mexico</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697384225-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697384225-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -361,7 +361,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Amsterdam Amsterdam, Netherlands</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
+<h5><a href='https://boards.greenhouse.io/algorythma/jobs/1914834'>Job Application for Android Developer (eCommerce Platform) at Algorythma</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -369,7 +369,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Krak?w Lesser Poland Voivodeship, Poland  Canada</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='http://temperednetworks.applytojob.com/apply/w3KksgoQnL/Sr-Android-Developer-Contract-To-Hire'>Sr. Android Developer (Contract to hire) - Tempered Networks - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://temperednetworks.applytojob.com/apply/w3KksgoQnL/Sr-Android-Developer-Contract-To-Hire'>Sr. Android Developer (Contract to hire) - Tempered Networks - Career Page</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -398,13 +398,13 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Dublin  Dublin</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getchip.recruitee.com/o/android-developer-london'>
+<h5><a href='https://getchip.recruitee.com/o/android-developer-london'>
       Android Developer - Chip
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://techfirefly.workable.com/j/169E74AF68'>Tech Firefly - Jobs: Android Developer (Locals Only) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://techfirefly.workable.com/j/169E74AF68'>Tech Firefly - Jobs: Android Developer (Locals Only) - Apply online</a></h5> 
 <p><span class="badge badge-light">United States  Plano, TX</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -439,11 +439,11 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p>Hace 3 d?as ... Android Developer. Santiago. Engineering ? Software Development. Full Time. 
 Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/android-mobile-software-developer-cmn3Z-63er6AqLaKiznY58'>Android Mobile Software Developer #0157 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/android-mobile-software-developer-cmn3Z-63er6AqLaKiznY58'>Android Mobile Software Developer #0157 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/isobar/job/oLjjbfwi'>Isobar Careers - Freelance Lead Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/isobar/job/oLjjbfwi'>Isobar Careers - Freelance Lead Android Developer</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -486,7 +486,7 @@ Android Developer at Bikemap in  | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8291-android-developer'>
+<h5><a href='https://www.42jobs.io/android/jobs/8291-android-developer'>
 Android Developer at Streami Inc. in Taepyeongno 1(il)-ga | Android jobs | 42jobs.io
 
 </a></h5> 
