--- a/security.html
+++ b/security.html
@@ -59,7 +59,7 @@
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AthenPolloLLC/743999698402657-sr-cyber-security-principal-engineer'>AthenPollo LLC Sr Cyber Security Principal Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AthenPolloLLC/743999698402657-sr-cyber-security-principal-engineer'>AthenPollo LLC Sr Cyber Security Principal Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -111,7 +111,7 @@
 <p><span class="badge badge-light">Mumbai Mumbai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nzAVmMwH'>WP Engine Careers - Senior Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nzAVmMwH'>WP Engine Careers - Senior Security Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -123,7 +123,7 @@
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Colliers1/743999692873355-security-analyst'>Colliers Security Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Colliers1/743999692873355-security-analyst'>Colliers Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -131,11 +131,11 @@
 <p><span class="badge badge-light">Kirkland, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kennasecurity/06410394-4596-4aad-8835-45834a4ed855'>Kenna Security - Sales Engineer - Boston</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kennasecurity/06410394-4596-4aad-8835-45834a4ed855'>Kenna Security - Sales Engineer - Boston</a></h5> 
 <p><span class="badge badge-light">Boston  Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=obycbfwQ&__jvst=Tenable+Employee&__jvsd=scYsVhwj&__jvsc=Twitter&bid=n67OmMwE'>Tenable Careers - Senior Information Security Analyst - Risk and Compliance</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=obycbfwQ&__jvst=Tenable+Employee&__jvsd=scYsVhwj&__jvsc=Twitter&bid=n67OmMwE'>Tenable Careers - Senior Information Security Analyst - Risk and Compliance</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland  Reston, Virginia  California California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -195,7 +195,7 @@
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698140976-security-engineer-cloud-infrastructure'>4Catalyzer Security Engineer - Cloud Infrastructure | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698140976-security-engineer-cloud-infrastructure'>4Catalyzer Security Engineer - Cloud Infrastructure | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -231,7 +231,7 @@
 <p><span class="badge badge-light">Tokyo Tokyo</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/information-security-analyst-i-ii-iii-10262'>Information Security Analyst I/II/III - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/information-security-analyst-i-ii-iii-10262'>Information Security Analyst I/II/III - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light">Minnesota, Minneapolis  Minneapolis</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -245,7 +245,7 @@
 <p><span class="badge badge-light">Riga, Latvia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careercyresconsulting.recruitee.com/o/automotive-security-software-engineer-wmd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/automotive-security-software-engineer-wmd'>
       Automotive Security Software Engineer (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
@@ -273,7 +273,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://edc.referrals.selectminds.com/jobs/security-engineer-2454'>Security Engineer - Entrust Datacard Careers</a></h5> 
+<h5><a href='https://edc.referrals.selectminds.com/jobs/security-engineer-2454'>Security Engineer - Entrust Datacard Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -302,7 +302,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oHCIafwV&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n7JjlMwL'>Freedom Financial Network Careers - Application Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oHCIafwV&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n7JjlMwL'>Freedom Financial Network Careers - Application Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -326,7 +326,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/flexport/jobs/1918570'>Job Application for Senior Security Engineer, Enterprise Infrastructure at Flexport</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flexport/jobs/1918570'>Job Application for Senior Security Engineer, Enterprise Infrastructure at Flexport</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -416,7 +416,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/hylant/job/o4Lpbfw9'>Hylant Careers - Security Analyst - IT</a></h5> 
+<h5><a href='https://jobs.jobvite.com/hylant/job/o4Lpbfw9'>Hylant Careers - Security Analyst - IT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -448,7 +448,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/inflection/e1aedf4b-02d1-4e48-97c5-59d8712d2773'>Inflection - Technical Security Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/inflection/e1aedf4b-02d1-4e48-97c5-59d8712d2773'>Inflection - Technical Security Analyst</a></h5> 
 <p><span class="badge badge-light">Omaha, NE</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
